# showball

./: .gitignore  Makefile  asset-manifest.json  docker-compose.yml  index.html  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  gunicorn.conf.py  openapi.json  package-lock.json  package.json  pyproject.toml
backend/app/: config.py  db.py  init_db.py  main.py  models.py  schemas.py  services.py
backend/app/api/: dependencies.py  errors.py  events.py
backend/app/api/v1/: endpoints.py
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  constants.ts
backend/src/auth/decorator/: roles.decorator.ts
backend/src/auth/decorators/: roles.decorator.ts
backend/src/auth/dto/: access-token.dto.ts  login.dto.ts  sign-in.dto.ts
backend/src/challenges/: challenges.controller.ts  challenges.module.ts  challenges.service.ts
backend/src/config/: configuration.ts
backend/src/database/: config.service.ts  player.model.ts
backend/src/files/: files.controller.ts  files.module.ts  files.service.ts
backend/src/leader-board/: leader-board.controller.ts  leader-board.module.ts  leader-board.service.ts
backend/src/players/: players.controller.ts  players.module.ts  players.service.ts
backend/src/profile/: profile.controller.ts  profile.module.ts  profile.service.ts
backend/src/tasks/: tasks.module.ts  tasks.service.ts
backend/src/tokens/: tokens.controller.ts  tokens.module.ts  tokens.service.ts
backend/src/utils/: document-entity-helper.ts
frontend/: Dockerfile  (+2 more)
(+148 files in other folders)
