[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["vargaon1 <varga@cortex.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
fastapi = "^0.96.0"
pydantic = { version = "^1.9", extras = ["dotenv"] }
pymongo = "^4.3.3"
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.10"
mypy = "^1.0.1"

[tool.poetry.scripts]
init-db = "app.init_db:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
